Angular 2 - Inspinia Starter Updated

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,10 @@
 <script src="assets/inspinia/lib/plugins/slimscroll/jquery.slimscroll.min.js"></script>
 <!-- Main Angular scripts-->
 <script src="assets/inspinia/lib/plugins/sweetalert/sweetalert.min.js"></script>
+<!-- Peace JS -->
+
 <script src="assets/idc.js"></script>
+
   <app>
     Loading...
   </app>
